[gd_scene load_steps=3 format=3 uid="uid://bbpvhvlitgexu"]

[ext_resource type="Script" uid="uid://c5py1v404x4bt" path="res://scripts/ui_scripts/pause_menu_script.gd" id="1_137s6"]
[ext_resource type="Script" uid="uid://cvagaxo832wvp" path="res://scripts/ui_scripts/go_to_pause_menu_script.gd" id="2_boc6r"]

[node name="PauseGameHud" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_137s6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 150
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Restart")
text = "              Resume              "

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Quit")
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Restart")
focus_neighbor_bottom = NodePath("../Resume")
text = "Quit"

[node name="Pausegame" type="Node" parent="." node_paths=PackedStringArray("pausemenu_node")]
process_mode = 1
script = ExtResource("2_boc6r")
pausemenu_node = NodePath("..")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
